dep_common = [dep_mali, dep_ocv]

executable(
    'opencl-opencv-interop',
    files(
      'opencl-opencv-interop.cpp'
    ),
    dependencies: dep_common,
    install: true,
)

executable(
    'opencl-threshold',
    files(
      'opencl-threshold.cpp'
    ),
    dependencies: dep_common,
    install: true,
)

executable(
    'opencl-gaussian',
    files(
      'opencl-gaussian.cpp'
    ),
    dependencies: dep_common,
    install: true,
)

executable(
    'opencl-histogram',
    files(
      'opencl-histogram.cpp'
    ),
    dependencies: dep_common,
    install: true,
)

executable(
    'opencl-maxloc',
    files(
      'opencl-maxloc.cpp'
    ),
    dependencies: dep_common,
    install: true,
)

executable(
    'cv_test',
    files(
      'cv_test.cpp'
    ),
    dependencies: dep_ocv,
    install: true,
)
